--- a/src/app/componentes/poupanca/list-poupanca/list-poupanca.component.html
+++ b/src/app/componentes/poupanca/list-poupanca/list-poupanca.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
   <button mat-raised-button color="warn" (click)="openDialog()">Adicionar Poupança</button>
+  <button mat-raised-button color="primary" (click)="openDialogCadastro()">Cadastro da Poupança com movimentacao</button>
 
 <mat-form-field appearance="standard">
   <mat-label>Filtro</mat-label>
