--- a/src/app/componentes/rendaFixa/cadastro-renda-fixa/cadastro-renda-fixa.component.html
+++ b/src/app/componentes/rendaFixa/cadastro-renda-fixa/cadastro-renda-fixa.component.html
@@ -11,13 +11,9 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label> Banco</mat-label>
-            <mat-select formControlName="bancoId" placeholder="Banco" >
-                <div *ngFor="let u of bancos">
-                    <mat-option [value]="u.bancoId"> {{ u.bancoNome }} </mat-option>
-                </div>
-            </mat-select>
-        </mat-form-field>      
+            <mat-label>Nome Renda Fixa</mat-label>
+            <input formControlName="nomeRendaFixa" matInput type="text" placeholder = "Nome Renda Fixa">
+        </mat-form-field>    
     </form>
     <form [formGroup]="movimentacaoForm">
         <mat-form-field appearance="outline">
@@ -46,6 +42,22 @@
             <mat-label>Custos</mat-label>
             <input formControlName="custos" matInput type="number" placeholder="Custos(Opcional)">
         </mat-form-field> 
+        <mat-form-field appearance="outline">
+            <mat-label> Banco</mat-label>
+            <mat-select formControlName="bancoId" placeholder="Banco" >
+                <div *ngFor="let u of bancos">
+                    <mat-option [value]="u.bancoId"> {{ u.bancoNome }} </mat-option>
+                </div>
+            </mat-select>
+        </mat-form-field>  
+        <mat-form-field appearance="outline">
+            <mat-label> Indexador</mat-label>
+            <mat-select formControlName="indexadorRendimentosId" placeholder="Indexador" >
+                <div *ngFor="let u of indexadores">
+                    <mat-option [value]="u.indexadorRendimentosId"> {{ u.indexadorRendimentosNome}} </mat-option>
+                </div>
+            </mat-select>
+        </mat-form-field>
     </form>
 </div>
 <div mat-dialog-actions [align]="'end'">
