--- a/src/app/componentes/rendaFixa/list-renda-fixa/list-renda-fixa.component.html
+++ b/src/app/componentes/rendaFixa/list-renda-fixa/list-renda-fixa.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
     <button mat-raised-button color="warn" (click)="openDialog()">Adicionar Renda Fixa</button>
+    <button mat-raised-button color="primary" (click)="openDialogCadastro()">Cadastro da Renda Fixa com movimentacao</button>
 
 <mat-form-field appearance="standard">
     <mat-label>Filtro</mat-label>
