--- a/src/app/componentes/rendaVariavel/list-renda-variavel/list-renda-variavel.component.html
+++ b/src/app/componentes/rendaVariavel/list-renda-variavel/list-renda-variavel.component.html
@@ -1,6 +1,7 @@
 <!-- botao para adicionar dialog -->
 <div class="container mt-3">
     <button mat-raised-button color="warn" (click)="openDialog()">Adicionar Renda Variavel</button>
+    <button mat-raised-button color="primary" (click)="openDialogCadastro()">Cadastro da Renda Variavel com movimentacao</button>
 <!-- filto -->
 <mat-form-field appearance="standard">
     <mat-label>Filtro</mat-label>
