--- a/src/app/componentes/tesouroDireto/list-tesouro-direto/list-tesouro-direto.component.html
+++ b/src/app/componentes/tesouroDireto/list-tesouro-direto/list-tesouro-direto.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
     <button mat-raised-button color="warn" (click)="openDialog()">Adicionar Tesouro Direto</button>
+    <button mat-raised-button color="primary" (click)="openDialogCadastro()">Cadastro Tesouro Direto com movimentacao</button>
 
 <mat-form-field appearance="standard">
     <mat-label>Filtro</mat-label>
