--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
+<app-navbar-usuario></app-navbar-usuario>
+<mat-toolbar color="primary" class="app-header">
+    <div><a href="https://www.positronx.io" target="_blank" class="positronx">PositronX.io</a></div>
+    <span class="nav-tool-items">
+      <a mat-button routerLink="loginIn" routerLinkActive="active">Log in</a>
+      <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+    </span>
+  </mat-toolbar>
+  <router-outlet></router-outlet>
 
