--- a/src/app/componentes/navbar/navbar.component.scss
+++ b/src/app/componentes/navbar/navbar.component.scss
@@ -1,21 +1,27 @@
 .example-spacer {
-    flex: 1 1 auto;
-  }
+  flex: 1 1 auto;
+}
 
-  .example-container {
+.example-container {
     height: 90%;
     border: 1px solid rgba(0, 0, 0, 0.5);
-  }
+}
   
-  .example-sidenav-content {
+.example-sidenav-content {
     display: flex;
     height: 100%;
     align-items: center;
     justify-content: center;
-  }
+}
   
-  .example-sidenav {
-    padding: 20px;
-  }
+.example-sidenav {
+    padding: 10px;
+}
 
+.login{
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+}
  
