--- a/src/app/componentes/login/login-usuario/login-usuario.component.html
+++ b/src/app/componentes/login/login-usuario/login-usuario.component.html
@@ -1,23 +1,20 @@
-<!-- 
-<div id="login" class="container-login100">
-  <div class="wrap-login100">
-      <div class="row">
-          <img src="assets\img\logo-com-nome.png"/>
-      </div>
+
+<div id="login" class="container-login">
+  <div class="login">
       <div class="row">
           <h1>Login</h1> 
       </div>
-      <form [formGroup]="usuario">
+      <form [formGroup]="loginUs">
           <div class="mb-4">
-              <label for="exampleInputEmail1" class="form-label">Email</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" formControlName="email"
+              <label for="InputEmail" class="form-label">Email</label>
+              <input type="email" class="form-control" id="Email" formControlName="email"
                   aria-describedby="emailHelp">
           </div>
           <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" formControlName="senha">
+              <label for="InputPassword" class="form-label">Senha</label>
+              <input type="password" class="form-control" id="Password" formControlName="senha">
           </div>
-          <button type="submit" class="btn btn-secondary" (click)="login()">Entrar</button>
+          <button type="submit" class="btn btn-primary" (click)="login()">Entrar</button>
       </form>
   </div>
-</div> -->
+</div>
