--- a/src/app/componentes/Usuarios/add-edit-usuarios/add-edit-usuarios.component.html
+++ b/src/app/componentes/Usuarios/add-edit-usuarios/add-edit-usuarios.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Adicionar Usuario</h1>
-<div mat-dialog-content>
+<div>
     <form [formGroup]="usuarioForm">
         <mat-form-field appearance="outline">
             <mat-label>Nome do Usuario</mat-label>
