--- a/src/app/componentes/navbar-usuario/navbar-usuario.component.html
+++ b/src/app/componentes/navbar-usuario/navbar-usuario.component.html
@@ -13,11 +13,11 @@
 <mat-drawer-container class="example-container" autosize >
     <mat-drawer #drawer class="sidenav" position="end" mode="over">
       <mat-nav-list class="nav-list"> 
-        <a mat-list-item routerLink="/loginUsuario" (click)="drawer.toggle()">
-          <i class="material-icons">account_circle</i>  Login
+        <a mat-list-item routerLink="/cadastroDoLogin" (click)="drawer.toggle()">
+          <i class="material-icons">account_circle</i>  cadastro do login
         </a>
-        <a mat-list-item routerLink="" (click)="drawer.toggle()">
-          <i class="material-icons">list </i> Resumo
+        <a mat-list-item routerLink="/loginCadastro" (click)="drawer.toggle()">
+          <i class="material-icons">list </i> login Cadastro
         </a>
         <a mat-list-item routerLink="/usuarios" (click)="drawer.toggle()">
           <i class="material-icons">group </i>  Usuarios
@@ -31,7 +31,7 @@
         <a mat-list-item routerLink="/carteira" (click)="drawer.toggle()">
           <i class="material-icons">account_balance_wallet</i>  Carteira
         </a> 
-        <a mat-list-item routerLink="#" (click)="drawer.toggle()">
+        <a mat-list-item href="http://localhost:4200" (click)="drawer.toggle()">
           <i class="material-icons">exit_to_app</i>  Sair
         </a> 
       </mat-nav-list>
