--- a/src/app/componentes/navbar-usuario/navbar-usuario.component.html
+++ b/src/app/componentes/navbar-usuario/navbar-usuario.component.html
@@ -13,8 +13,8 @@
 <mat-drawer-container class="example-container" autosize >
     <mat-drawer #drawer class="sidenav" position="end" mode="over">
       <mat-nav-list class="nav-list"> 
-        <a mat-list-item routerLink="/cadastroDoLogin" (click)="drawer.toggle()">
-          <i class="material-icons">account_circle</i>  cadastro do login
+        <a mat-list-item routerLink="/loginUsuario" (click)="drawer.toggle()">
+          <i class="material-icons">account_circle</i>  Login Usuario
         </a>
         <a mat-list-item routerLink="/loginCadastro" (click)="drawer.toggle()">
           <i class="material-icons">list </i> login Cadastro
