--- a/src/app/componentes/cadastroLogin/login-cadastro/login-cadastro.component.html
+++ b/src/app/componentes/cadastroLogin/login-cadastro/login-cadastro.component.html
@@ -1,6 +1,5 @@
 <div  mat-dialog-content class="container-login">
     <div class="login">
-        <div mat-dialog-content>
             <h1 mat-dialog-title>Cadastro</h1>
             <form [formGroup]="usuarioForm">
                 <mat-form-field appearance="outline">
@@ -28,9 +27,10 @@
                     <input formControlName="usuarioSenha" matInput type="password">
                 </mat-form-field>
             </form>
-        </div>
         <div mat-dialog-actions>
-            <button  mat-raised-button color="primary" (click)="EnviarFormulario()">Salvar</button>
+            <button  mat-raised-button color="warn" mat-dialog-close>Fechar</button>
+            <button  mat-raised-button color="primary" (click)="EnviarFormulario()">cadastrar</button>
         </div>
     </div>
 </div>
+
