--- a/src/app/componentes/cadastroLogin/login-cadastro/login-cadastro.component.scss
+++ b/src/app/componentes/cadastroLogin/login-cadastro/login-cadastro.component.scss
@@ -13,15 +13,9 @@
   
 .login {
     width: 390px;
-    background: rgb(214, 214, 226);
     border-radius: 10px;
     overflow: hidden;
-    padding: 77px 55px 33px 55px;
-    box-shadow: 0 5px 10px 0px rgb(0 0 0 / 10%);
-    -moz-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 5px 10px 0px rgb(0 0 0 / 10%);
-    -o-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
-    -ms-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
+    padding: 77px 55px ;
 }
   
 h1{
